# taller_I_1c_2023

./: .gitignore  README.md
guia1/ej1/ahorcado/: Cargo.toml
guia1/ej1/ahorcado/src/: ahorcado.rs  main.rs  words.rs  words.txt
guia1/ej2/contador/: Cargo.toml
guia1/ej2/contador/src/: contador.rs  main.rs
guia2/ej1/src/: compartir.rs  configuration.rs  estado.rs  main.rs  nodo.conf
tp_individual/ajedrez/: Cargo.toml
tp_individual/ajedrez/src/: ajedrez.rs  archivo_tablero.rs  casilla.rs  errores.rs  lib.rs  main.rs  parse_args.rs  pieza.rs  tablero.rs  tablero.txt  tipo_pieza.rs
tp_individual/ajedrez/src/gtk/: main_window.glade
tp_individual/ajedrez/src/test_files/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tp_individual/ajedrez/tests/: integration_test.rs
